--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,7 @@
     <string name="text_value">text value</string>
     <string name="textview">TextView</string>
     <string name="edittext_events">EditText Events</string>
+    <string name="onitemselectedlistener">OnItemSelectedListener</string>
+    <string name="drag_imageview">Drag ImageView</string>
+    <string name="ondatesetlistener">OnDateSetListener</string>
 </resources>
